# django-recaptcha

./: .coveragerc  .gitignore  .pep8  .pre-commit-config.yaml  .travis.yml  ADOPTERS.md  AUTHORS  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  captcha.py  manage.py  pyproject.toml  requirements.txt  setup.py  test_settings.py  tox.ini
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml  testing.yml  tests.yml
.tox/py27-1.10/: .tox-config1  pip-selfcheck.json
.tox/py27-1.10/local/: bin  include  lib  log
.tox/py27-1.8/: .tox-config1  pip-selfcheck.json
.tox/py27-1.8/local/: bin  include  lib  log
.tox/py27-1.9/: .tox-config1  pip-selfcheck.json
.tox/py27-1.9/local/: bin  include  lib  log
.tox/py35-1.10/: .tox-config1  pip-selfcheck.json
.tox/py35-1.8/: .tox-config1  pip-selfcheck.json
.tox/py35-1.9/: .tox-config1  pip-selfcheck.json
captcha/: __init__.py  _compat.py  apps.py  checks.py  client.py  decorators.py  exceptions.py  fields.py  forms.py  tests.py  utils.py  widgets.py
captcha/backends/default/: __init__.py  urls.py
captcha/templates/admin/: login_recaptcha.html
captcha/templates/captcha/: options.html  widget.html  widget_ajax.html  widget_invisible.html  (+4 more)
captcha/tests/: forms.py  test_client.py  test_fields.py  tests.py  urls.py
django_recaptcha/: checks.py  client.py  exceptions.py  fields.py  widgets.py
django_recaptcha/enterprise/: README.md  client.py  conf.py  exception.py  fields.py  widgets.py
django_recaptcha/tests/: test_checks.py  test_fields.py  tests.py
recaptcha/: fields.py  widgets.py
(+44 files in other folders)
